--- a/src/components/Css/Home.css
+++ b/src/components/Css/Home.css
@@ -13,10 +13,10 @@
 
 .Auth-form {
   width: 420px;
-  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  box-shadow: rgb(156, 155, 155) 2px 4px 10px 7px;
   padding-top: 30px;
   padding-bottom: 20px;
-  border-radius: 8px;
+  border-radius: 50px;
   background-color: white;
 }
 
@@ -28,9 +28,13 @@
 .Auth-form-title {
   text-align: center;
   margin-bottom: 1em;
+  text-shadow: 2px 1px 3px rgb(189, 119, 160) ;
   font-size: 24px;
   color: rgb(34, 34, 34);
   font-weight: 800;
+}
+.form-group{
+  text-shadow: 2px 1px 3px #f1c35f ;
 }
 
 label {
@@ -43,4 +47,5 @@ label {
   color: aliceblue;
   text-decoration: none;
   font-weight: bold;
+  text-shadow: 2px 1px 5px #e9e5f5
 }
